Includes working versions of the first analyses
Working analyses:
Total Players
Total Purchase Analysis
Gender Demographics
Purchase Analysis by Gender

--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -2,9 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -13,54 +119,352 @@
     "file_to_load = \"Resources/purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_data = pd.read_csv(file_to_load)"
+    "purchase_data = pd.read_csv(file_to_load)\n",
+    "purchase_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Players\n",
+       "0            576"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Display the total number of players\n"
+    "#Display the total number of players - unique values in the SN column\n",
+    "totalplayers = purchase_data[\"SN\"].value_counts()\n",
+    "len(totalplayers) \n",
+    "player_dict = [{\"Total Players\": len(totalplayers) }]\n",
+    "totalplayer_df = pd.DataFrame(player_dict)\n",
+    "totalplayer_df\n",
+    "                              "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Unique Items</th>\n",
+       "      <th>Average Price</th>\n",
+       "      <th>Number of Purchases</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>179</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>$2,379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0                     179         $3.05                  780     $2,379.77"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# purchase analysis (total)\n",
-    "# Run basic calculations to obtain number of unique items, average price, etc.\n",
+    "# Purchase Analysis (total)\n",
+    "# Run basic calculations to obtain number of unique items, average price, number of purchases, and total revenue\n",
+    "unique_items = len(purchase_data[\"Item ID\"].value_counts())\n",
+    "avg_price = purchase_data[\"Price\"].mean()\n",
+    "number_purchases = purchase_data[\"Purchase ID\"].count()\n",
+    "total_revenue = purchase_data[\"Price\"].sum()\n",
+    "\n",
     "# Create a summary data frame to hold the results\n",
-    "# Optional: give the displayed data cleaner formatting\n",
-    "# Display the summary data frame"
+    "purchase_dict = [{\"Number of Unique Items\": unique_items,\n",
+    "                \"Average Price\": avg_price,\n",
+    "                \"Number of Purchases\": number_purchases,\n",
+    "                \"Total Revenue\": total_revenue}]\n",
+    "purchase_df = pd.DataFrame(purchase_dict)\n",
+    "purchase_df\n",
+    "\n",
+    "# Give the displayed data cleaner formatting\n",
+    "# Use Map to format all the columns\n",
+    "purchase_df[\"Average Price\"] = purchase_df[\"Average Price\"].map(\"${:.2f}\".format)\n",
+    "purchase_df[\"Total Revenue\"] = purchase_df[\"Total Revenue\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Display the summary data frame\n",
+    "purchase_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1.91%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Total Count Percentage\n",
+       "Male                           484     84.03%\n",
+       "Female                          81     14.06%\n",
+       "Other / Non-Disclosed           11      1.91%"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Gender Demographics\n",
-    "# Percentage and Count of Male Players\n",
-    "# Percentage and Count of Female Players\n",
-    "# Percentage and Count of Other / Non-Disclosed"
+    "# Gender Demographics: Percentage and Count of Male Players, Percentage and Count of Female Players\n",
+    "# Percentage and Count of Other / Non-Disclosed\n",
+    "\n",
+    "#group_SN = purchase_data.groupby(['SN'])\n",
+    "#group_SN_df = pd.Dataframe(group_SN)\n",
+    "#group_gender_df = group_SN_df.groupby(['Gender'])\n",
+    "#print(group_SN)\n",
+    "#total = group_SN[\"Gender\"].count()\n",
+    "#len(total)\n",
+    "#gender_counts = group_SN[\"Gender\"].sum()\n",
+    "#gender_counts\n",
+    "\n",
+    "# get just gender and SN, remove duplicates, create series for count and percent\n",
+    "\n",
+    "gender_SN_df = purchase_data.loc[:, [\"Gender\", \"SN\"]]\n",
+    "gender_SN_unique_df = gender_SN_df.drop_duplicates()\n",
+    "gender_counts = gender_SN_unique_df[\"Gender\"].value_counts()\n",
+    "gender_percents = gender_counts / gender_SN_unique_df[\"Gender\"].count() * 100\n",
+    "\n",
+    "# create the gender dataframe\n",
+    "gender_df = pd.DataFrame({\n",
+    "    \"Total Count\": gender_counts,\n",
+    "    \"Percentage\": gender_percents\n",
+    "})\n",
+    "\n",
+    "# format the % column\n",
+    "gender_df[\"Percentage\"] = gender_df[\"Percentage\"].map(\"{:.2f}%\".format)\n",
+    "\n",
+    "# display the dataframe\n",
+    "gender_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Total Purchase Avg. Per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>$3.20</td>\n",
+       "      <td>$361.94</td>\n",
+       "      <td>$4.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>$3.02</td>\n",
+       "      <td>$1967.64</td>\n",
+       "      <td>$4.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$50.19</td>\n",
+       "      <td>$4.56</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
+       "\n",
+       "                      Total Purchase Value Total Purchase Avg. Per Person  \n",
+       "Gender                                                                     \n",
+       "Female                             $361.94                          $4.47  \n",
+       "Male                              $1967.64                          $4.07  \n",
+       "Other / Non-Disclosed               $50.19                          $4.56  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Purchasing Analysis (Gender)\n",
-    "# Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. by gender\n",
+    "# Run basic calculations to obtain: \n",
+    "# purchase count, avg. purchase price, total purchase value, and avg. purchase total per person, all by gender\n",
+    "#use groupby\n",
+    "grouped_gender_df = purchase_data.groupby([\"Gender\"]).sum()\n",
+    "#grouped_gender_df\n",
+    "purchase_count = purchase_data.groupby([\"Gender\"]).count()[\"Purchase ID\"]\n",
+    "#purchase_count\n",
+    "avg_purch_price = purchase_data.groupby([\"Gender\"]).mean()[\"Price\"]\n",
+    "total_purch_value = purchase_data.groupby([\"Gender\"]).sum()[\"Price\"]\n",
+    "avg_total_purch = total_purch_value / gender_counts\n",
+    "\n",
     "# Create a summary data frame to hold the results\n",
+    "summary_df = pd.DataFrame({\"Purchase Count\": purchase_count,\n",
+    "                          \"Average Purchase Price\": avg_purch_price,\n",
+    "                          \"Total Purchase Value\": total_purch_value,\n",
+    "                          \"Total Purchase Avg. Per Person\": avg_total_purch})\n",
     "# Optional: give the displayed data cleaner formatting\n",
-    "# Display the summary data frame"
+    "# format the % column\n",
+    "summary_df[\"Average Purchase Price\"] = summary_df[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
+    "summary_df[\"Total Purchase Value\"] = summary_df[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "summary_df[\"Total Purchase Avg. Per Person\"] = summary_df[\"Total Purchase Avg. Per Person\"].map(\"${:.2f}\".format)\n",
+    "\n",
+    "# Display the summary data frame\n",
+    "summary_df"
    ]
   },
   {
