Includes completed age analysis
Added the Age of Player analysis utilizing bins, pd.cut, groupby

--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "0            576"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "Other / Non-Disclosed           11      1.91%"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,9 +335,9 @@
     "#gender_counts = group_SN[\"Gender\"].sum()\n",
     "#gender_counts\n",
     "\n",
-    "# get just gender and SN, remove duplicates, create series for count and percent\n",
+    "# get just gender and SN, remove duplicates, create series for count and percent; note Age added for use later\n",
     "\n",
-    "gender_SN_df = purchase_data.loc[:, [\"Gender\", \"SN\"]]\n",
+    "gender_SN_df = purchase_data.loc[:, [\"Gender\", \"SN\", \"Age\"]]\n",
     "gender_SN_unique_df = gender_SN_df.drop_duplicates()\n",
     "gender_counts = gender_SN_unique_df[\"Gender\"].value_counts()\n",
     "gender_percents = gender_counts / gender_SN_unique_df[\"Gender\"].count() * 100\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "Other / Non-Disclosed               $50.19                          $4.56  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,31 +469,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marksutton/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>2.95%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10 to 14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>3.82%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15 to 19</th>\n",
+       "      <td>107</td>\n",
+       "      <td>18.58%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20 to 24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>44.79%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25 to 29</th>\n",
+       "      <td>77</td>\n",
+       "      <td>13.37%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30 to 34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>9.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35 to 39</th>\n",
+       "      <td>31</td>\n",
+       "      <td>5.38%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2.08%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Total Count Percentage of Players\n",
+       "<10                17                 2.95%\n",
+       "10 to 14           22                 3.82%\n",
+       "15 to 19          107                18.58%\n",
+       "20 to 24          258                44.79%\n",
+       "25 to 29           77                13.37%\n",
+       "30 to 34           52                 9.03%\n",
+       "35 to 39           31                 5.38%\n",
+       "40+                12                 2.08%"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Age Demographics\n",
     "# Establish bins for ages\n",
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 200]\n",
+    "\n",
+    "# Create labels for these bins\n",
+    "group_labels = [\"<10\", \"10 to 14\", \"15 to 19\", \"20 to 24\", \"25 to 29\", \"30 to 34\",\n",
+    "                \"35 to 39\", \"40+\"]\n",
+    "\n",
     "# Categorize the existing players using the age bins. Hint: use pd.cut()\n",
+    "#Create new column Age Ranges using pd.cut\n",
+    "gender_SN_unique_df[\"Age Ranges\"] = pd.cut(gender_SN_unique_df[\"Age\"], bins, labels=group_labels)\n",
+    "age_group_df = gender_SN_unique_df.groupby(\"Age Ranges\")\n",
+    "age_group_df\n",
+    "#len(totalplayers)\n",
+    "\n",
     "# Calculate the numbers and percentages by age group\n",
+    "counts_by_group = gender_SN_unique_df[\"Age Ranges\"].value_counts()\n",
+    "percent_by_group = counts_by_group / len(totalplayers) * 100\n",
+    "\n",
     "# Create a summary data frame to hold the results\n",
+    "agesummary_df = pd.DataFrame({\"Total Count\": counts_by_group,\n",
+    "                 \"Percentage of Players\": percent_by_group})\n",
+    "\n",
     "# Optional: round the percentage column to two decimal points\n",
-    "# Display Age Demographics Table"
+    "agesummary_df[\"Percentage of Players\"] = agesummary_df[\"Percentage of Players\"].map(\"{:.2f}%\".format)\n",
+    "\n",
+    "# Display Age Demographics Table (after sorting by index)\n",
+    "agesummary_df = agesummary_df.sort_index()\n",
+    "agesummary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Total Purchase Avg. Per Person</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$77.13</td>\n",
+       "      <td>$4.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10 to 14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>$2.96</td>\n",
+       "      <td>$82.78</td>\n",
+       "      <td>$3.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15 to 19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>$3.04</td>\n",
+       "      <td>$412.89</td>\n",
+       "      <td>$3.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20 to 24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>$1114.06</td>\n",
+       "      <td>$4.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25 to 29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>$2.90</td>\n",
+       "      <td>$293.00</td>\n",
+       "      <td>$3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30 to 34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>$2.93</td>\n",
+       "      <td>$214.00</td>\n",
+       "      <td>$4.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35 to 39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>$3.60</td>\n",
+       "      <td>$147.67</td>\n",
+       "      <td>$4.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$2.94</td>\n",
+       "      <td>$38.24</td>\n",
+       "      <td>$3.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Purchase Count Average Purchase Price Total Purchase Value  \\\n",
+       "<10                   23                  $3.35               $77.13   \n",
+       "10 to 14              28                  $2.96               $82.78   \n",
+       "15 to 19             136                  $3.04              $412.89   \n",
+       "20 to 24             365                  $3.05             $1114.06   \n",
+       "25 to 29             101                  $2.90              $293.00   \n",
+       "30 to 34              73                  $2.93              $214.00   \n",
+       "35 to 39              41                  $3.60              $147.67   \n",
+       "40+                   13                  $2.94               $38.24   \n",
+       "\n",
+       "         Total Purchase Avg. Per Person  \n",
+       "<10                               $4.54  \n",
+       "10 to 14                          $3.76  \n",
+       "15 to 19                          $3.86  \n",
+       "20 to 24                          $4.32  \n",
+       "25 to 29                          $3.81  \n",
+       "30 to 34                          $4.12  \n",
+       "35 to 39                          $4.76  \n",
+       "40+                               $3.19  "
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Purchasing Analysis (Age)\n",
     "# Bin the purchase_data data frame by age\n",
-    "# Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. in the table below\n",
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 200]\n",
+    "\n",
+    "# Create labels for these bins\n",
+    "group_labels = [\"<10\", \"10 to 14\", \"15 to 19\", \"20 to 24\", \"25 to 29\", \"30 to 34\",\n",
+    "                \"35 to 39\", \"40+\"]\n",
+    "\n",
+    "#use pd.cut to create Age Ranges\n",
+    "purchase_data[\"Age Ranges\"] = pd.cut(purchase_data[\"Age\"], bins, labels=group_labels)\n",
+    "newage_group_df = purchase_data.groupby(\"Age Ranges\")\n",
+    "#print(newage_group_df.sum())\n",
+    "\n",
+    "#age_counts = newage_group_df[\"Age Ranges\"]\n",
+    "#print(age_counts.count())\n",
+    "\n",
+    "# Run basic calculations to obtain: \n",
+    "# Purchase Count, Average Purchase Price, Total Purchase Value, Avg Total Purchase per Person\n",
+    "# use groupby\n",
+    "grouped_age = purchase_data.groupby([\"Age Ranges\"]).sum()\n",
+    "#grouped_age\n",
+    "purchase_count_agerange = purchase_data.groupby([\"Age Ranges\"]).count()[\"Purchase ID\"]\n",
+    "#purchase_count\n",
+    "avg_purch_price_agerange = purchase_data.groupby([\"Age Ranges\"]).mean()[\"Price\"]\n",
+    "#avg_purch_price_agerange\n",
+    "total_purch_value_agerange = purchase_data.groupby([\"Age Ranges\"]).sum()[\"Price\"]\n",
+    "#total_purch_value_agerange\n",
+    "avg_total_purch_agerange = total_purch_value_agerange / counts_by_group\n",
+    "#avg_total_purch_agerange\n",
+    "\n",
     "# Create a summary data frame to hold the results\n",
+    "agesummary2_df = pd.DataFrame({\"Purchase Count\": purchase_count_agerange,\n",
+    "                          \"Average Purchase Price\": avg_purch_price_agerange,\n",
+    "                          \"Total Purchase Value\": total_purch_value_agerange,\n",
+    "                          \"Total Purchase Avg. Per Person\": avg_total_purch_agerange})\n",
+    "\n",
     "# Optional: give the displayed data cleaner formatting\n",
-    "# Display the summary data frame"
+    "agesummary2_df[\"Average Purchase Price\"] = agesummary2_df[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
+    "agesummary2_df[\"Total Purchase Value\"] = agesummary2_df[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "agesummary2_df[\"Total Purchase Avg. Per Person\"] = agesummary2_df[\"Total Purchase Avg. Per Person\"].map(\"${:.2f}\".format)\n",
+    "\n",
+    "# Display the summary data frame\n",
+    "agesummary2_df\n"
    ]
   },
   {
